--- a/en/speakers.html
+++ b/en/speakers.html
@@ -277,12 +277,12 @@
           <div class="row">
                 <div class="column">
                 <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
-                    <p><img src="../archivos/2024/expositores/RafaelTovar-crop.jpg" alt="Tovar" style="width:80%"></p>
+                    <p><img src="../archivos/2024/expositores/FranciscoHernanOrtegaCulaciati-crop.jpg" alt="Davis" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-                    <h5 style="margin-bottom: -3%;"><p>Rafael Tovar</p></h5>
+                    <h5 style="margin-bottom: -3%;"><p>Francisco Ortega Culaciati</p></h5>
                     <p>
-                    Statistician, Ph.D. from the School of Statistics, Researcher at the Faculty of Engineering, University of Valle, Cali, Colombia.
+                    Civil Engineer and Ph.D. in Geophysics, currently a professor at the University of Chile, specializing in active tectonics, geodesy, and earthquake modeling. He has led various research projects and published numerous scientific contributions in the field of seismic deformation and fault slip estimation.
                     </p>
                 </div>
                 </div>
@@ -303,34 +303,8 @@
 
 
             <div class="row">
-                <div class="column">
-                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
-                    <p><img src="../archivos/2024/expositores/SergioDavis-crop.jpg" alt="Davis" style="width:80%"></p>
-                </div>
-                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-                    <h5 style="margin-bottom: -3%;"><p>Sergio Davis</p></h5>
-                    <p>
-                    Physicist from the University of Santiago and Ph.D. in Physics from the Royal Institute of Technology in Sweden, worked at the University of Chile. He is currently a Researcher at the Chilean Nuclear Energy Commission and a Professor at Andrés Bello University publishing nearly 100 scientific articles on Statistical Physics, Information Theory, among others.
-                    </p>
-                </div>
-                </div>
 
-                <div class="column">
-                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
-                    <p><img src="../archivos/2024/expositores/FranciscoHernanOrtegaCulaciati-crop.jpg" alt="Davis" style="width:80%"></p>
-                </div>
-                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-                    <h5 style="margin-bottom: -3%;"><p>Francisco Ortega Culaciati</p></h5>
-                    <p>
-                    Civil Engineer and Ph.D. in Geophysics, currently a professor at the University of Chile, specializing in active tectonics, geodesy, and earthquake modeling. He has led various research projects and published numerous scientific contributions in the field of seismic deformation and fault slip estimation.
-                    </p>
-                </div>
-                </div>
-
-          </div>
-
-          <div class="row">
-                <div class="column">
+               <div class="column">
                 <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
                     <p><img src="../archivos/2024/expositores/JosefinaLacasa.png" alt="Davis" style="width:80%"></p>
                 </div>
@@ -343,23 +317,38 @@
                 </div>
                 </div>
 
-               <div class="column">
-               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
-               20%;margin-bottom: -3%;">
-		                <p><img src="../archivos/2024/expositores/LlerzyTorresOme.jpeg" alt="TorresOme" style="width:80%"></p>
+
+                <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/SergioDavis-crop.jpg" alt="Davis" style="width:80%"></p>
                 </div>
-                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-		                <h5 style="margin-bottom: -3%;"><p>Llerzy Torres Ome</p></h5>
-		                <p class="title">
-		                Graduate in Applied Mathematics from Surcolombiana University, Master in Statistics, currently pursuing a Ph.D. in Mathematical Sciences at the University of Valle. University professor in mathematics and statistics, his work focuses on prior probability distributions and copula functions. <!--He has been a university professor at the Catholic Lumens Gentium University Foundation and the University of Valle, -->
-		                </p>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>Sergio Davis</p></h5>
+                    <p>
+                    Physicist from the University of Santiago and Ph.D. in Physics from the Royal Institute of Technology in Sweden, worked at the University of Chile. He is currently a Researcher at the Chilean Nuclear Energy Commission and a Professor at Andrés Bello University publishing nearly 100 scientific articles on Statistical Physics, Information Theory, among others.
+                    </p>
                 </div>
-		        </div>
+                </div>
+
+
 
 
           </div>
 
-             <div class="row">
+          <div class="row">
+
+                <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/RafaelTovar-crop.jpg" alt="Tovar" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>Rafael Tovar</p></h5>
+                    <p>
+                    Statistician, Ph.D. from the School of Statistics, Researcher at the Faculty of Engineering, University of Valle, Cali, Colombia.
+                    </p>
+                </div>
+                </div>
+
 
                <div class="column">
                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
@@ -372,7 +361,36 @@
                          Licenciate's and Master's degrees in Physical Sciences from the University of Chile, currently working at the Institute of Philosophy and Complexity Sciences of the Chilean Atomic Energy Commission. With 10 years of teaching and research experience in physics applied to neuroscience and quantum mechanics, Yasmín is dedicated to scientific outreach.
 		                </p>
                 </div>
+                </div>
+        </div>
+        <div class="row">
+		        <div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
+               20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/AndreaGoijman.jpg" alt="Goijman" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Andrea Goijman</p></h5>
+		                <p class="title">
+                         Doctor in Ecology, she evaluates socio-ecological systems and uses decision analysis tools for the conservation of biodiversity and ecosystem services in agroecosystems. In addition, she has research experience in bird ecology in agroecosystems, biostatistics with both Bayesian and frequentist approaches, applied to wildlife populations and communities.
+		                </p>
+                </div>
 		        </div>
+
+
+             <div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
+               20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/LlerzyTorresOme.jpeg" alt="TorresOme" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Llerzy Torres Ome</p></h5>
+		                <p class="title">
+		                Graduate in Applied Mathematics from Surcolombiana University, Master in Statistics, currently pursuing a Ph.D. in Mathematical Sciences at the University of Valle. University professor in mathematics and statistics, his work focuses on prior probability distributions and copula functions. <!--He has been a university professor at the Catholic Lumens Gentium University Foundation and the University of Valle, -->
+		                </p>
+                </div>
+		        </div>
+
 
 
           </div>
@@ -399,7 +417,7 @@
                 <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
 		                <h5 style="margin-bottom: -3%;"><p>Gustavo Landfried</p></h5>
 		                <p class="title">
-		                Licenciate's in Social Anthropology and Ph.D. in Computer Science from the University of Buenos Aires, Gustavo is currently a researcher and professor in the Department of Computing.
+		                Licenciate's in Social Anthropology and Ph.D. in Computer Science from the University of Buenos Aires, Gustavo is currently a researcher and graduate teaching assistant in the Department of Computer Science.
 		                His work focuses on the application of Bayesian methods in fields such as health, sports, and education. Co-founder of Bayes Plurinational.
 		                </p>
                 </div>
