--- a/es/cronograma.html
+++ b/es/cronograma.html
@@ -137,14 +137,14 @@
             <div class="section" style="text-align: justify;">
 
                 <h4 class="header col s12 light">
-                Schedule Plurinational Bayes 2024
+                Cronograma Bayes Plurinacional 2024
                 <h4>
 
                 <h6 class="header col s12 light">
-                During the Plurinational Bayes Congress 2023 it was proposed as an objective to strengthen the offer of training in research and/or application of Bayesian inference, through the development of workshops taught by specialists from our region, giving rise to the creation of the Plurinational Bayes School-Congress 2024.
-                The Plurinational Bayes School-Congress 2024 will be held at the National University of Salta, Argentina.
-                During 3 days (Tuesday 6 to Thursday 8) we will share various activities, including several practical workshops at all levels, exhibitions, panel discussions, poster sessions, among others.
-                On Friday we will carry out tourist activities in the city of Salta.
+                Durante el Congreso Bayes Plurinacional 2023 se propuso como objetivo fortalecer la oferta de formación en investigación y/o aplicación de la inferencia bayesiana, mediante el desarrollo de talleres dictados por especialistas de nuestra región, dando origen a la creación de la Escuela-Congreso Bayes Plurinacional 2024.
+                La Escuela-Congreso Bayes Plurinacional 2024, se realizará en la Universidad Nacional de Salta, Argentina.
+                Durante 3 días (martes 6 al jueves 8) compartiremos diversas actividades, entre las que se incluyen varios talleres prácticos de todos los niveles, exposiciones, mesa de debate, sesiones de pósters, entre otras.
+                El día viernes realizaremos actividades turísticas en la ciudad de Salta.
                 <!--Registra t propuesta para la Escuela-Congreso Bayes Plurinacional 2024 <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html"><b>aquí</b></a>.
                 Tenés tiempo hasta el 30 de abril.
                 Para proponer eventos virtuales, acceda de forma permanente al siguiente <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html">formulario</a>.-->
@@ -156,23 +156,23 @@
 
             <table align="center">
               <tr>
-                  <th style="text-align: center;" class="vertical">Activity</th>
-                  <th style="text-align: center;" class="vertical">Tuesday 6</th>
-                  <th style="text-align: center;" class="vertical">Wednesday 7</th>
-                  <th style="text-align: center;" class="vertical">Thursday 8</th>
-                  <th style="text-align: center;" class="vertical">Name</th>
-                  <th style="text-align: center;" class="vertical">Responsible</th>
+                  <th style="text-align: center;" class="vertical">Actividad</th>
+                  <th style="text-align: center;" class="vertical">Martes 6</th>
+                  <th style="text-align: center;" class="vertical">Miércoles 7</th>
+                  <th style="text-align: center;" class="vertical">Jueves 8</th>
+                  <th style="text-align: center;" class="vertical">Nombre</th>
+                  <th style="text-align: center;" class="vertical">Responsable</th>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Groups 1</td>
+                  <td style="text-align: center;" class="vertical">Grupos 1</td>
                   <td style="text-align: center;">9:00 - 9:30</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">"Welcome"</td>
-                  <td style="text-align: center;">Random’ groups of 6</td>
+                  <td style="text-align: center;">Conversación: "Historia, motivaciones y proyectos"</td>
+                  <td style="text-align: center;">Grupos de 6 al "azar"</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Workshop 1</td>
+                  <td style="text-align: center;" class="vertical">Taller 1</td>
                   <td style="text-align: center;">9:30 - 11:00</td>
                   <td style="text-align: center;">11:30 - 13:00</td>
                   <td style="text-align: center;">14:30 - 16:00</td>
@@ -180,7 +180,7 @@
                   <td style="text-align: center;">Gustavo Landfried</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Workshop 2</td>
+                  <td style="text-align: center;" class="vertical">Taller 2</td>
                   <td style="text-align: center;">15:30 (break) 17:15</td>
                   <td style="text-align: center;">15:30 (break) 17:15</td>
                   <td style="text-align: center;">09:00 - 10:30</td>
@@ -188,7 +188,7 @@
                   <td style="text-align: center;">Tomás Capretto</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Short workshop1</td>
+                  <td style="text-align: center;" class="vertical">Taller Corto 1</td>
                   <td style="text-align: center;">11:45 - 13:00</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -196,7 +196,7 @@
                   <td style="text-align: center;">Camila Neder</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Short workshop2</td>
+                  <td style="text-align: center;" class="vertical">Taller Corto 2</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">10:15 - 11:30</td>
                   <td style="text-align: center;">-</td>
@@ -204,7 +204,7 @@
                   <td style="text-align: center;">Leila Sofía Asplanato</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Short workshop3</td>
+                  <td style="text-align: center;" class="vertical">Taller Corto 3</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">11:45 - 13:00</td>
@@ -212,7 +212,7 @@
                   <td style="text-align: center;">Enrique ter Horst</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk with code</td>
+                  <td style="text-align: center;" class="vertical">Charla con código</td>
                   <td style="text-align: center;">11:00 - 11:45</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -220,7 +220,7 @@
                   <td style="text-align: center;">Gabriel Alzamendi</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk with code</td>
+                  <td style="text-align: center;" class="vertical">Charla con código</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">9:00 - 9:45</td>
                   <td style="text-align: center;">-</td>
@@ -228,7 +228,7 @@
                   <td style="text-align: center;">Juan Bekios Calfa</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk with code</td>
+                  <td style="text-align: center;" class="vertical">Charla con código</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">10:30 - 11:45</td>
@@ -236,7 +236,7 @@
                   <td style="text-align: center;">Daniel Fortuna</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 1</td>
+                  <td style="text-align: center;" class="vertical">Charla 1</td>
                   <td style="text-align: center;">14:30 - 14:50</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -244,7 +244,7 @@
                   <td style="text-align: center;">Sergio Hernández</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 2</td>
+                  <td style="text-align: center;" class="vertical">Charla 2</td>
                   <td style="text-align: center;">14:50 - 15:10</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -252,7 +252,7 @@
                   <td style="text-align: center;">Josefina Lacasa</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 3</td>
+                  <td style="text-align: center;" class="vertical">Charla 3</td>
                   <td style="text-align: center;">15:10 - 15:30</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -260,7 +260,7 @@
                   <td style="text-align: center;">Yasmín Navarrete</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 4</td>
+                  <td style="text-align: center;" class="vertical">Charla 4</td>
                   <td style="text-align: center;">17:15 - 17:35</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -268,7 +268,7 @@
                   <td style="text-align: center;">Llerzy Torres Ome</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 5</td>
+                  <td style="text-align: center;" class="vertical">Charla 5</td>
                   <td style="text-align: center;">17:35 - 17:55</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -276,7 +276,7 @@
                   <td style="text-align: center;">Andrea Goijman</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 6</td>
+                  <td style="text-align: center;" class="vertical">Charla 6</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">14:30 - 14:50</td>
                   <td style="text-align: center;">-</td>
@@ -284,7 +284,7 @@
                   <td style="text-align: center;">Sergio Davis</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 7</td>
+                  <td style="text-align: center;" class="vertical">Charla 7</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">14:50 - 15:10</td>
                   <td style="text-align: center;">-</td>
@@ -292,7 +292,7 @@
                   <td style="text-align: center;">Rafael Tovar Cuevas</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 8</td>
+                  <td style="text-align: center;" class="vertical">Charla 8</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">15:10 - 15:30</td>
                   <td style="text-align: center;">-</td>
@@ -300,7 +300,7 @@
                   <td style="text-align: center;">Oxana Krimina</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 9</td>
+                  <td style="text-align: center;" class="vertical">Charla 9</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">17:15 - 17:35</td>
                   <td style="text-align: center;">-</td>
@@ -308,7 +308,7 @@
                   <td style="text-align: center;">Francisco Ortega-Culaciati</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 10</td>
+                  <td style="text-align: center;" class="vertical">Charla 10</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">17:35 - 17:55</td>
                   <td style="text-align: center;">-</td>
@@ -316,15 +316,15 @@
                   <td style="text-align: center;">Macarena Piaggio</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Poster talks</td>
+                  <td style="text-align: center;" class="vertical">Charlas de póster</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">11:15 - 11:45</td>
-                  <td style="text-align: center;">Quick poster talks</td>
-                  <td style="text-align: center;">Several persons</td>
+                  <td style="text-align: center;">Charlas rápidas de pósters</td>
+                  <td style="text-align: center;">Varias personas</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Lunch</td>
+                  <td style="text-align: center;" class="vertical">Almuerzo</td>
                   <td style="text-align: center;">13:00 - 13:45</td>
                   <td style="text-align: center;">13:00 - 13:45</td>
                   <td style="text-align: center;">13:00 - 13:45</td>
@@ -332,7 +332,7 @@
                   <td style="text-align: center;">-</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Poster</td>
+                  <td style="text-align: center;" class="vertical">Póster</td>
                   <td style="text-align: center;">13:45 - 14:00</td>
                   <td style="text-align: center;">13:45 - 14:00</td>
                   <td style="text-align: center;">13:45 - 14:00</td>
@@ -340,7 +340,7 @@
                   <td style="text-align: center;">Varias personas</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Round Table</td>
+                  <td style="text-align: center;" class="vertical">Mesa Debate</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">16:15 - 17:45</td>
@@ -348,36 +348,36 @@
                   <td style="text-align: center;">Fernando Roberto Momo</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Groups 2</td>
+                  <td style="text-align: center;" class="vertical">Grupos 2</td>
                   <td style="text-align: center;">14:00 - 14:30</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">Ideas: "Por qué construir la comunidad Bayes Plurinacional"</td>
-                  <td style="text-align: center;">Random’ groups of 6</td>
+                  <td style="text-align: center;">Grupos de 6 al "azar"</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Groups 3</td>
+                  <td style="text-align: center;" class="vertical">Grupos 3</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">9:45 - 10:15</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">Ideas: "Para qué construir la comunidad Bayes Plurinacional"</td>
-                  <td style="text-align: center;">Random’ groups of 6</td>
+                  <td style="text-align: center;">Grupos de 6 al "azar"</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Groups 4</td>
+                  <td style="text-align: center;" class="vertical">Grupos 4</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">14:00 - 14:30</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">Ideas: "Cómo construir la comunidad Bayes Plurinacional"</td>
-                  <td style="text-align: center;">Random’ groups of 6</td>
+                  <td style="text-align: center;">Grupos de 6 al "azar"</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">ASSAMBLY</td>
+                  <td style="text-align: center;" class="vertical">ASAMBLEA</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">14:00 - 14:30</td>
                   <td style="text-align: center;">Conclusiones: “Acciones a futuro”</td>
-                  <td style="text-align: center;">General Assambly</td>
+                  <td style="text-align: center;">Asamblea General</td>
               </tr>
           </table>
 
@@ -385,14 +385,15 @@
 
 
                 <h6 class="header col s12 light">
-                The schedule is subject to possible modifications, which will be communicated through this website and our social networks.
+                El cronograma está sujeto a posibles modificaciones, que serán comunicadas a través de esta página web y nuestras redes sociales.
+
                 <br><br>
 
                 <!--<b>¿Te interesa dar un taller o una charla, organizar una mesa debate o presentar un póster?</b> Completá el siguiente <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html">formulario</a>.
                 Se aceptarán propuestas hasta el 30 de abril 2024. Por consultas, dirigirse al e-mail bayesplurinacional@gmail.com-->
 
                 <!--<ul>
-                    <li> <b>Workshop "Inferencia Causal, Series Temporales y Toma de Decisiones"</b>
+                    <li> <b>Taller "Inferencia Causal, Series Temporales y Toma de Decisiones"</b>
                     </li>
 
                     <br>
