--- a/es/expositores.html
+++ b/es/expositores.html
@@ -272,17 +272,21 @@
           </div>
 
           <div class="row">
+
+
+
                 <div class="column">
                 <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
-                    <p><img src="../archivos/2024/expositores/RafaelTovar-crop.jpg" alt="Tovar" style="width:80%"></p>
+                    <p><img src="../archivos/2024/expositores/FranciscoHernanOrtegaCulaciati-crop.jpg" alt="Davis" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-                    <h5 style="margin-bottom: -3%;"><p>Rafael Tovar</p></h5>
+                    <h5 style="margin-bottom: -3%;"><p>Francisco Ortega Culaciati</p></h5>
                     <p>
-                    Estadístico, Doctor de la Escuela de Estadística, Investigador en la Facultad de Ingenierías Universidad del Valle, Cali Colombia.
+                    Ingeniero Civil y Doctor en Geofísica, actualmente profesor en la Universidad de Chile, especializado en tectónica activa, geodesia y modelización de terremotos. Ha liderado diversos proyectos de investigación y publicado numerosas contribuciones científicas en el campo de la deformación sísmica y la estimación del deslizamiento de fallas.
                     </p>
                 </div>
                 </div>
+
 
                <div class="column">
                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
@@ -300,36 +304,8 @@
 
 
             <div class="row">
-                <div class="column">
-                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
-                    <p><img src="../archivos/2024/expositores/SergioDavis-crop.jpg" alt="Davis" style="width:80%"></p>
-                </div>
-                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-                    <h5 style="margin-bottom: -3%;"><p>Sergio Davis</p></h5>
-                    <p>
-                    Ingeniero Físico por la Universidad de Santiago y Doctor en Física por el Royal Institute of Technology de Suecia, trabajó en la Universidad de Chile. Actualmente es Investigador de la Comisión Chilena de Energía Nuclear, y Profesor en la Universidad Andrés Bello publicando cerca de 100 artículos científicos sobre Física Estadística, Teoría de Información, entre otros.
-                    </p>
-                </div>
-                </div>
-
-                <div class="column">
-                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
-                    <p><img src="../archivos/2024/expositores/FranciscoHernanOrtegaCulaciati-crop.jpg" alt="Davis" style="width:80%"></p>
-                </div>
-                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-                    <h5 style="margin-bottom: -3%;"><p>Francisco Ortega Culaciati</p></h5>
-                    <p>
-                    Ingeniero Civil y Doctor en Geofísica, actualmente profesor en la Universidad de Chile, especializado en tectónica activa, geodesia y modelización de terremotos. Ha liderado diversos proyectos de investigación y publicado numerosas contribuciones científicas en el campo de la deformación sísmica y la estimación del deslizamiento de fallas.
-                    </p>
-                </div>
-                </div>
 
 
-
-
-          </div>
-
-           <div class="row">
                 <div class="column">
                 <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
                     <p><img src="../archivos/2024/expositores/JosefinaLacasa.png" alt="Davis" style="width:80%"></p>
@@ -343,28 +319,43 @@
                 </div>
                 </div>
 
-               <div class="column">
-               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
-               20%;margin-bottom: -3%;">
-		                <p><img src="../archivos/2024/expositores/LlerzyTorresOme.jpeg" alt="TorresOme" style="width:80%"></p>
+                <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/SergioDavis-crop.jpg" alt="Davis" style="width:80%"></p>
                 </div>
-                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-		                <h5 style="margin-bottom: -3%;"><p>Llerzy Torres Ome</p></h5>
-		                <p class="title">
-		                Egresado en Matemática Aplicada de la Universidad Surcolombiana, Magister en Estadística, actualmente cursa un Doctorado en Ciencias Matemáticas en la Universidad del Valle. Docente universitario en matemática y estadística, su trabajo se enfoca en distribuciones de probabilidad previas y en funciones copula <!--Ha sido docente universitario en la Fundación Universitaria Católica Lumens Gentium y la Universidad del Valle, -->
-		                </p>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>Sergio Davis</p></h5>
+                    <p>
+                    Ingeniero Físico por la Universidad de Santiago y Doctor en Física por el Royal Institute of Technology de Suecia, trabajó en la Universidad de Chile. Actualmente es Investigador de la Comisión Chilena de Energía Nuclear, y Profesor en la Universidad Andrés Bello publicando cerca de 100 artículos científicos sobre Física Estadística, Teoría de Información, entre otros.
+                    </p>
                 </div>
-		        </div>
+                </div>
+
+
 
 
           </div>
 
-             <div class="row">
+           <div class="row">
+
+
+             <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/RafaelTovar-crop.jpg" alt="Tovar" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>Rafael Tovar</p></h5>
+                    <p>
+                    Estadístico, Doctor de la Escuela de Estadística, Investigador en la Facultad de Ingenierías Universidad del Valle, Cali Colombia.
+                    </p>
+                </div>
+                </div>
+
 
                <div class="column">
                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
                20%;margin-bottom: -3%;">
-		                <p><img src="../archivos/2024/expositores/YasminNavareteDiaz-foto.jpg" alt="TorresOme" style="width:80%"></p>
+		                <p><img src="../archivos/2024/expositores/YasminNavareteDiaz-foto.jpg" alt="Navarrete" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
 		                <h5 style="margin-bottom: -3%;"><p>Yasmín Navarrete</p></h5>
@@ -375,6 +366,37 @@
 		        </div>
 
 
+
+
+          </div>
+
+             <div class="row">
+
+            <div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
+               20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/LlerzyTorresOme.jpeg" alt="TorresOme" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Llerzy Torres Ome</p></h5>
+		                <p class="title">
+		                Egresado en Matemática Aplicada de la Universidad Surcolombiana, Magister en Estadística, actualmente cursa un Doctorado en Ciencias Matemáticas en la Universidad del Valle. Docente universitario en matemática y estadística, su trabajo se enfoca en distribuciones de probabilidad previas y en funciones copula <!--Ha sido docente universitario en la Fundación Universitaria Católica Lumens Gentium y la Universidad del Valle, -->
+		                </p>
+                </div>
+                </div>
+
+            <div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
+               20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/AndreaGoijman.jpg" alt="Goijman" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Andrea Goijman</p></h5>
+		                <p class="title">
+                         Doctora en Ecología, evalúa sistemas socio-ecologicos y utiliza herramientas de análisis de decisión para la conservación de biodiversidad y servicios ecosistémicos en agroecosistemas. Ademas, posee experiencia en investigacion de ecología de aves en agroecosistemas, la bioestadística tanto con enfoques Bayesianos como frecuentistas, aplicada a poblaciones y comunidades de fauna silvestre.
+		                </p>
+                </div>
+		        </div>
           </div>
 
 
