--- a/navega_es.html
+++ b/navega_es.html
@@ -47,7 +47,8 @@
 
     <ul id="dropdown3" class="dropdown-content">
         <li><a href=""></a></li>
-        <li><a href="../es/descripcion.html">Descripción</a></li>
+        <li><a href="../es/cronograma.html">Cronograma</a></li>
+        <li><a href="../es/expositores.html">Expositores</a></li>
         <li><a href="../es/ciudad.html">Ciudad</a></li>
         <li><a href="../es/historia.html">Historia</a></li>
         <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
@@ -74,7 +75,7 @@
         <div class="nav-wrapper container"><a id="logo-container" href="../es/index.html" class="brand-logo"><em>Bayes</em></a>
         <ul class="right hide-on-med-and-down">
             <li><a class="dropdown-button" href="#!" data-target="dropdown2">Somos<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Eventos<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Congreso<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contacto<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="musica.html">Música</a></li>
@@ -91,8 +92,9 @@
             <li><a href="organiza.html">&#x2022; Organización</a></li>
             <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
             <li><a href="../es/musica.html">&#x2022; Música</a></li>
-            <li><a href="">Eventos:</a></li>
-            <li><a href="../es/descripcion.html">&#x2022; Descripción</a></li>
+            <li><a href="">Congreso:</a></li>
+            <li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
+            <li><a href="../es/expositores.html">&#x2022; Expositores</a></li>
             <li><a href="../es/ciudad.html">&#x2022; Ciudad</a></li>
             <li><a href="../es/historia.html">&#x2022; Historia</a></li>
             <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
